# Integration-Pantheon-Files

./: CMakeLists.txt  README.md
po/: ca.po  cs.po  da.po  de.po  eo.po  es.po  eu.po  fr.po  ky.po  ml.po  nn.po  pantheon-files-drop-plugin.pot
src/: CMakeLists.txt  Plugin.vala  drop.plug
